K8sManifests/BackendDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3-tier-app-eks
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: backend
      containers:
      - name: backend
        image: hendawyy/backend:latest
        ports:
        - containerPort: 3000
