K8sManifests/FrontendDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3-tier-app-eks
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: frontend
      containers:
      - name: frontend
        image: hendawyy/frontend:latest
        ports:
        - containerPort: 80
