K8sManifests/FrontEndSvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: 3-tier-app-eks
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
